2015-07-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-05-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-05-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-04-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-04-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-03-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-03-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-03-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-02-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-01-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-01-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.1 features ( http://www.glfw.org/docs/latest/news.html#news_31 ).
	* glfw30.rb: Previous version of 'glfw.rb' is available as 'glfw30.rb'.

2015-01-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-01-14  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-01-06  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-11-19  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-10-04  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* Applied the changes by hramrach (https://github.com/vaiorabbit/ruby-opengl/pull/4).

2014-09-10  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-08-12  vaiorabbit  <https://twitter.com/vaiorabbit>

	* OpenGL 4.5
	* generator : [BUGFIX] 'const' arguments aren't handled correctly ('const GLfloat buffer' of glClearNamedFramebufferfi).