@@ -377,7 +377,7 @@ module GLFW
     extern 'void glfwSetInputMode(void*, int, int)'
     extern 'int glfwGetKey(void*, int)'
     extern 'int glfwGetMouseButton(void*, int)'
-    extern 'void glfwGetCursorPos(void*, void*, void*)'
+    extern 'void glfwGetCursorPos(void*, double*, double*)'
     extern 'void glfwSetCursorPos(void*, double, double)'
     extern 'void* glfwSetKeyCallback(void*, void*)'
     extern 'void* glfwSetCharCallback(void*, void*)'
